manifests/gateway/competence-matching-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: competence-matching-vs
  namespace: osaan-dev
spec:
  gateways:
  - osaan-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /v1/subscriptions
    route:
    - destination:
        host: competence-matching-svc
        port:
          number: 80
