manifests/gateway/competence-profile-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: competence-profile-vs
  namespace: osaan-dev
spec:
  gateways:
  - osaan-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /v1/competences
    route:
    - destination:
        host: competence-profile-svc
        port:
          number: 80
