manifests/gateway/employee-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: employee-vs
  namespace: osaan-dev
spec:
  gateways:
  - osaan-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /v1/employees
    route:
    - destination:
        host: employee-svc
        port:
          number: 80
