manifests/gateway/mail-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mail-gateway
  namespace: osaan-dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "mail.local"
    port:
      number: 80
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mail-vs
  namespace: osaan-dev
spec:
  gateways:
  - mail-gateway
  hosts:
  - "mail.local"
  http:
  - route:
    - destination:
        host: mailhog-svc
        port:
          number: 8025
