manifests/gateway/osaan-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: osaan-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "osaan.local"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: osaan-certificate
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: osaan-vs
  namespace: istio-system
spec:
  gateways:
  - osaan-gateway
  hosts:
  - "osaan.local"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: osaan-ui-svc.osaan-dev.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: osaan-ui-dr
  namespace: istio-system
spec:
  host: osaan-ui-svc.osaan-dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
