manifests/gateway/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "prometheus.local"
    port:
      number: 80
      name: http-prometheus
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - "prometheus.local"
  gateways:
  - prometheus-gateway
  http:
  - route:
    - destination:
        host: prometheus-server
        port:
          number: 9090
