manifests/gateway/rabbit-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rabbit-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "rabbit.local"
    port:
      number: 80
      name: http-rabbit
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rabbit-vs
  namespace: istio-system
spec:
  hosts:
  - "rabbit.local"
  gateways:
  - rabbit-gateway
  http:
  - route:
    - destination:
        host: rabbitmq.osaan-dev.svc.cluster.local
        port:
          number: 15672
